# table_identical_checks

./: .envrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TABLE_IDENTICAL_CHECKS_QA_KLL.md  pyproject.toml
.claude/skills/compare/: SKILL.md
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: output_architecture_future.md  project_overview.md  sqlalchemy_migration.md  style_conventions.md  suggested_commands.md  task_completion.md  test_tables.md  tolerance_feature.md
docs/: architecture.md  cli-reference.md
src/table_identical_checks/: __init__.py  cli.py
src/table_identical_checks/backend/: __init__.py  pipeline.py  query_builder.py  schema.py  summary.py  tolerance.py
tests/: __init__.py  conftest.py  test_array.py  test_diff_output.py  test_diff_split_resolver.py  test_diff_split_sql.py  test_geography.py  test_kll.py  test_numeric.py  test_partition_filter.py  test_pipeline.py  test_schema_intersection.py  test_string.py  test_struct.py  test_table_formatter.py  test_tolerance.py  test_unsupported.py
