[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table-identical-checks"
version = "0.1.0"
description = "Compare BigQuery tables and identify differences"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Christian Homberg", email = "chris@christianhomberg.me" },
]
keywords = ["bigquery", "data-quality", "testing", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-bigquery>=1.5.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/chr96er/table-identical-checks"
Repository = "https://github.com/chr96er/table-identical-checks"
Issues = "https://github.com/chr96er/table-identical-checks/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
table-check = "table_identical_checks.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/table_identical_checks"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=table_identical_checks --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/table_identical_checks"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
